--- a/client/src/Components/NavBar1.css
+++ b/client/src/Components/NavBar1.css
@@ -63,11 +63,11 @@ body {
   text-decoration: none;
 }
 
-.banner {
+.banner1 {
   position: relative;
   width: 100%;
   height: 100vh;
-
+  background: url(./banner-slide.jpg);
   background-size: cover;
 }
 
@@ -102,4 +102,30 @@ body {
 .middle1:hover:before {
   visibility: visible;
   transform: scaleX(1);
+}
+.toggle-button {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: black;
+  border-radius: 10px;
+}
+
+@media all and (max-width: 800px) {
+  .banner1 {
+    position: relative;
+    width: 100%;
+    background: none;
+    height: 0;
+  }
 }
