--- a/client/src/Components/Complaint/Step1.css
+++ b/client/src/Components/Complaint/Step1.css
@@ -1,25 +1,22 @@
-.formStyle{
-    text-align: center;
-    background: #fff;
-    padding: 20px;
-    border: 3px solid #cacac3;
-    border-radius: 5px;
-
-
-
+.formStyle {
+  text-align: center;
+  background: #fff;
+  padding: 20px;
+  border: 3px solid #cacac3;
+  border-radius: 5px;
 }
 
-
-.comp-title ::after{
-    content: '';
-    display: block;
-    border-bottom: 2px solid #337ab7;
-    width: 44px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
+.comp-title ::after {
+  content: "";
+  display: block;
+  border-bottom: 2px solid #337ab7;
+  width: 44px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.test{
-    margin: 0 0 10px;
+.test {
+  margin: 0 0 10px;
+  text-align: left;
 }
